--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Exceptional Realty Group - Luxury Homes - Contact</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <script src"https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js">
+  </script>
 </head>
 <body>
   <header>
@@ -58,11 +62,11 @@
         <h3>Links</h3>
         <p>
           <a href="#" target="_blank">Home Restoration</a><br>
-          <a href="#" target="_blank">Afordable Mortgages</a><br>
+          <a href="#" target="_blank">Affordable Mortgages</a><br>
           <a href="#" target="_blank">Professional Moving Crew</a>
         </p>
       </div>
-      
+
       <div>
         <h3>Follow</h3>
         <p>
@@ -76,6 +80,6 @@
     <footer>
       &copy; 2014 Exceptional Realty. All Rights Reserved.
     </footer>
-  
+
 </body>
 </html>
