--- a/market-report.html
+++ b/market-report.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Exceptional Realty Group - Luxury Homes - Market Report</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js">
+  </script>
 </head>
 <body>
   <header>
@@ -17,7 +21,7 @@
   </header>
 
   <section>
-    <h3>Market Report</h3>
+    <h3 class="milk-text">Market Report</h3>
     <table>
       <tr>
         <th>Address</th>
@@ -48,7 +52,7 @@
 
   <section id="details">
       <div>
-        <h3>Contact</h3>
+        <h3 class="milk-text">Contact</h3>
         <p>
           email: <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
           phone: +1 710 555 1234
@@ -69,7 +73,7 @@
           <a href="#" target="_blank">Professional Moving Crew</a>
         </p>
       </div>
-      
+
       <div>
         <h3>Follow</h3>
         <p>
@@ -83,6 +87,6 @@
     <footer>
       &copy; 2014 Exceptional Realty. All Rights Reserved.
     </footer>
-  
+
 </body>
 </html>
