--- a/market-report.html
+++ b/market-report.html
@@ -2,13 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Exceptional Realty Group - Luxury Homes - Market Report</title>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js">
+
+  </script><title>Exceptional Realty Group - Luxury Homes - Market Report</title>
 </head>
 <body>
   <header>
     <div id="logo">
-      <h1>Exceptional</h1>
-      <h2>Realty Group</h2>
+      <h1 class= "milk-text">Exceptional</h1>
+      <h2 class= "milk-text">Realty Group</h2>
     </div>
 
     <nav>
@@ -69,7 +74,7 @@
           <a href="#" target="_blank">Professional Moving Crew</a>
         </p>
       </div>
-      
+
       <div>
         <h3>Follow</h3>
         <p>
@@ -83,6 +88,6 @@
     <footer>
       &copy; 2014 Exceptional Realty. All Rights Reserved.
     </footer>
-  
+
 </body>
 </html>
