--- a/real-estate-listings.html
+++ b/real-estate-listings.html
@@ -6,6 +6,9 @@
 </head>
 <body>
   <header>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+    <link rel="stylesheet" href="css/style.css">
     <div id="logo">
       <h1>Exceptional</h1>
       <h2>Realty Group</h2>
@@ -36,7 +39,7 @@
   <section>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, molestias, quaerat in commodi autem itaque officia laboriosam fugiat perferendis et assumenda cum aliquid. Officia, officiis ullam deleniti est illum dignissimos!</p>
   </section>
-  
+
   <section>
     <h3>Property Archive</h3>
     <h4>2014</h4>
@@ -86,7 +89,7 @@
           <a href="#" target="_blank">Professional Moving Crew</a>
         </p>
       </div>
-      
+
       <div>
         <h3>Follow</h3>
         <p>
