--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Poppins|Varela+Round|PT+Sans" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js">
     </script>
@@ -10,10 +11,10 @@
   </head>
   <body>
     <header>
-      <!-- logo -->
-      <h1>Exceptional</h1>
-      <h2>Realty Group</h2>
-
+      <div id="logo">
+        <h1>Exceptional</h1>
+        <h2>Realty Group</h2>
+      </div>
       <nav>
         <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
       </nav>
@@ -55,7 +56,7 @@
         </address>
       </div>
 
-      <div>
+      <div id="detail">
         <h3>Links</h3>
         <p>
           <a href="#" target="_blank">Home Restoration</a><br>
