--- a/real-estate-listings.html
+++ b/real-estate-listings.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Exceptional Realty Group - Luxury Homes - Listings</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js">
+  </script>
 </head>
 <body>
   <header>
@@ -17,7 +21,7 @@
   </header>
 
   <section>
-    <h3>Condos</h3>
+    <h3 class="milk-text">Condos</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, perspiciatis atque amet repudiandae sed unde facilis tempora aspernatur. Repellendus, beatae eaque velit dolores incidunt reprehenderit officiis consectetur impedit numquam ad.</p>
   </section>
 
@@ -36,7 +40,7 @@
   <section>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, molestias, quaerat in commodi autem itaque officia laboriosam fugiat perferendis et assumenda cum aliquid. Officia, officiis ullam deleniti est illum dignissimos!</p>
   </section>
-  
+
   <section>
     <h3>Property Archive</h3>
     <h4>2014</h4>
@@ -86,7 +90,7 @@
           <a href="#" target="_blank">Professional Moving Crew</a>
         </p>
       </div>
-      
+
       <div>
         <h3>Follow</h3>
         <p>
