--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+   <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
   <title>Exceptional Realty Group - Luxury Homes - Contact</title>
+  
 </head>
 <body>
   <header>
