--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <figcaption>Exceptional Realty Group Promotional Video - Source: archive.org</figcaption>
       </figure>
     </section>
-
+/* Merge */
     <section id="details">
       <div>
         <h3>Contact</h3>
